--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="maincontainer">
       <header>
         <div class="header-img">
-          <img src="./assets/images/image-omelette.jpeg" alt="">
+          <img src="./assets/images/image-omelette.jpeg" alt="#">
         </div>
       </header>
       
